--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>INDEX</title>
+    <title>Title</title>
 </head>
 <body>
-
+<p><a href="/pens" target="_blank">Tollak</a></p>
+<p><a href="/people" target="_blank">Emberek<a></p>
 </body>
 </html>
